bugfix toggle visibility and scrollable on iOS

--- a/app/styles/heart-src/_heart.scss
+++ b/app/styles/heart-src/_heart.scss
@@ -4,9 +4,10 @@
 $height-bottombar: 50px !default;
 $height-topbar: 44px !default;
 
-body.layer{
+body{
 	overflow: hidden;
 	margin:0;
+	
 }
 .layer{
 	position: absolute;
@@ -20,6 +21,13 @@ body.layer{
 	overflow-x: hidden;
 	overflow-y: auto;
 	-webkit-overflow-scrolling: touch;
+
+	-webkit-perspective: 1000px;
+	perspective: 1000px;
+	-webkit-perspective-origin: 50% 50%;
+	perspective-origin: 50% 50%;
+	-webkit-transform-style: preserve-3d;
+	transform-style: preserve-3d;
 
 	&.with-topbar{
 		top: $height-topbar;
